Add secure Supabase sign-in and resilient cloud sync